fixed articles text truncation

--- a/frontend/apps/tekmonks/pages/article/article.styleBody.css
+++ b/frontend/apps/tekmonks/pages/article/article.styleBody.css
@@ -62,3 +62,11 @@ img {
 a:hover {
     color: #07439c;
 }
+
+@media (max-width: 1024px) {
+    ul li{
+        width: unset;
+        padding-right: 20px;
+        float: unset;
+    }
+}
